# snipsnap

./: .dockerignore  .gitignore  AGENTIC.md  Dockerfile  README.md  alembic.ini  assort_clips_service.py  audio_transcriber.py  candidate_clip.py  captions_service.py  clip_scorer_service.py  config.py  deploy.sh  docker-compose.yml  main.py  main_dup.py  models.py  package-lock.json  package.json  pyproject.toml  saliency_scorer_service.py  scaling-policy.sh  serverless.yaml  setup_alembic.py  sqs_service.py
agents/: boundary_agent.py  edge_refiner_agent.py  test_edge_refiner_agent.py
alembic/: env.py
alembic/versions/: 001_create_video_audio_tables.py  002_add_transcript_column.py  003_create_score_metadata_tabe.py  004_create_stream_table.py
api-lambda/: README.md  aurora_service.py  handler.py  package-lock.json  package.json  serverless.yaml
api_lambda/: README.md  aurora_service.py  handler.py  highlight_handler.py  infra-requirements.md  requirements.txt
detectors/: __init__.py  scene_detector.py
evaluators/: edge_refiner.py  snap_evaluator.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: Header.jsx  Loader.jsx  VideoPlayer.jsx
llm/: base_llm.py  claude.py  nova.py
nlp/: __init__.py  text_tiling.py
repositories/: aurora_service.py  s3_service.py
stream_processor/: audio_processor.py  processor.py  video_processor.py
utils/: boundary_snapper.py  helpers.py  logger.py  purge_s3.py  unique_async_queue.py  upload_to_s3.py
(+18 files in other folders)
